# ss-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build-docker-image.yml  ci.yml
acl/: chn.acl  update_chn_acl_list.sh
scripts/: docker.sh  ss-rs.sh
src/: args.rs  bits.rs  context.rs  lib.rs  main.rs  plugin.rs  socks5.rs  tcp.rs  url.rs
src/acl/: cidr.rs  ip_set.rs  mod.rs  rule_set.rs
src/crypto/: aead.rs  cipher.rs  mod.rs
src/net/: buf.rs  io.rs  listener.rs  mod.rs  stream.rs
src/security/: mod.rs
src/socks/: mod.rs  socks4.rs  socks5.rs
tests/: ss.rs
