[package]
name = "ss-rs"
version = "0.2.0"
authors = ["ocfbnj"]
edition = "2021"
description = "An unofficial shadowsocks implementation that can work with official shadowsocks."
readme = "README.md"
homepage = "https://github.com/ocfbnj/ss-rs"
repository = "https://github.com/ocfbnj/ss-rs"
license-file = "LICENSE"
keywords = ["shadowocks", "ss", "socks", "firewall", "proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.3"
bloom = "0.3.2"
clap = { version = "3.1.18", features = ["derive"] }

# async
futures-core = "0.3.21"
tokio = { version = "1.18.2", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "macros",
    "signal",
    "sync",

] }

# crypto
md5 = "0.7.0"
rand = "0.8.5"
hkdf = "0.12.3"
sha1 = "0.10.1"
aead = "0.4.3"
aes-gcm = "0.9.4"
chacha20poly1305 = "0.9.0"

# logging
log = "0.4.17"
env_logger = "0.9.0"
