[package]
name = "ss-rs"
version = "0.2.12"
authors = ["ocfbnj"]
edition = "2021"
description = "An unofficial shadowsocks implementation that can work with official shadowsocks."
readme = "README.md"
repository = "https://github.com/ocfbnj/ss-rs"
license = "MIT"
keywords = ["shadowsocks", "ss", "socks", "firewall", "proxy"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
bloom = "0.3.2"
regex = "1.5.6"
bitvec = "1.0.0"
base64 = "0.13.0"
chrono = "0.4.19"
urlencoding = "2.1.0"
clap = { version = "3.1.18", features = ["derive"] }

# async
futures-core = "0.3.21"
tokio = { version = "1.18.2", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "macros",
    "process",
    "signal",
] }

# crypto
md5 = "0.7.0"
rand = "0.8.5"
hkdf = "0.12.3"
sha1 = "0.10.1"
aead = "0.4.3"
aes-gcm = "0.9.4"
chacha20poly1305 = "0.9.0"

# logging
log = { version = "0.4.17", features = ["release_max_level_debug"] }
env_logger = "0.9.0"

[dev-dependencies]
tokio = { version = "1.18.2", features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "macros",
    "signal",
    "sync",
] }
